@startuml 
class models.Animal{
    nombre:string
    edad:integer
    cuidador_id:integer 
    especie_id:integer
    recinto_id:integer
}
 
class models.Cuidador{
    nombre:string
    apellido:string
    edad:integer
    telefono:string
    especialidad:string
}
class models.Recinto{
    nombre:string
    capacidad:integer
}
class models.Especie{
    nombre:string
    recinto_id:integer
}
 
class models.Actividad{
    nombre:string
    dia:integer
    horario:string 
    descripcion:text
}

class controllers.AnimalController{
    resource()
}
class controllers.CuidadorController{
    resource()
}
class controllers.RecintoController{
    resource()
}
class controllers.EspecieController{
    resource()
}
class controllers.ActividadController{
    resource()
}

models.Especie "1"*--"*" models.Animal
models.Recinto "1"--"*" models.Especie
models.Recinto "1"*--"*" models.Animal
models.Cuidador "1"*--"*" models.Animal
models.Actividad "1"*--"*" models.Animal
@enduml